# sandbox

./: .gitignore  README.md  pyproject.toml  requirements.txt  sandbox.py
assets/: sandbox-diagram.excalidraw
scripts/: download-images.sh  extract-initrd-vmlinuz.sh  gen-config.py  sandbox-init.sh
src/kunai_sandbox/: __init__.py  main.py
src/kunai_sandbox/tools/: gen_config.py  sandbox_init.py
