[project]
name = "kunai-sandbox"
version = "0.1.2"
description = "Simple malware sandbox powered by Qemu and Kunai"
readme = "README.md"
authors = [{ name = "qjerome", email = "qjerome@rawsec.lu" }]
requires-python = ">=3.13"
dependencies = [
    "paramiko>=3.5.0",
    "pykunai>=0.1.3",
    "pyyaml>=6.0.2",
    "qemu-qmp>=0.0.3",
]

[project.scripts]
kunai-sandbox = "kunai_sandbox:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
